Moved sorcer to sorcer-extra, added sorcer-util. Fixed shell and example 6
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@150 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/all.config
@@ -39,11 +39,19 @@ com.sun.jini.start {
             ConfigUtil.concat(new Object[] {
                 repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"), ps,
             	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps
-            	
-            //	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            //	repo, new ArtifactCoordinates("net.jini.lookup","serviceui","2.2.1"), ps
             }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
+          	new String[] { home + "/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/whoIsIt-prv.config" }
+        )
+        new SorcerServiceDescriptor(
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+            policy,
+            ConfigUtil.concat(new Object[] {
+                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-api","11.1"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex1-service","11.1"), ps
+            }),
+	        "sorcer.ex1.provider.WhoIsItProvider2",
           	new String[] { home + "/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/whoIsIt-prv.config" }
         )
     };
