--- a/iGrid/modules/examples/ex6/ex6-client/pom.xml
+++ b/iGrid/modules/examples/ex6/ex6-client/pom.xml
@@ -1,66 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>ex6</artifactId>
-        <version>11.1</version>
-    </parent>
+	<parent>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>ex6</artifactId>
+		<version>11.1</version>
+	</parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
-    <artifactId>ex6-client</artifactId>
-    <name>SORCER examples :: ex6 :: client</name>
+	<groupId>org.sorcersoft.sorcer</groupId>
+	<artifactId>ex6-client</artifactId>
+	<name>SORCER examples :: ex6 :: client</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex6-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>client-common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
+	<properties>
+		<xrt>f5</xrt>
+		<startWithWebster>false</startWithWebster>
+	</properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>ex6-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>client-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-ant-tasks</artifactId>
+			<version>2.1.3</version>			
+		</dependency>		
+	</dependencies>
 
-
-                <configuration>
-                    <executable>java</executable>
-                    <arguments>
-<!--                           <argument>-Xdebug</argument>
-                        <argument>-Xrunjdwp:transport=dt_socket,server=y,address=8000</argument>
- -->                        
- 						<argument>-DiGrid.home=${env.IGRID_HOME}</argument>
-                        <argument>-Dsorcer.env.file=${env.IGRID_HOME}/configs/sorcer.env</argument>
-                        <argument>-Djava.util.logging.config.file=${env.IGRID_HOME}/configs/sorcer.logging</argument>
-                        <argument>-Djava.security.policy=${env.IGRID_HOME}/policy/policy.all</argument>
-						<argument>-Dsorcer.webster.internal=true</argument>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<!-- Associate the read-project-properties goal with the initialize 
+					phase, to read the properties file. -->
+				<configuration>
+					<files>
+						<file>${env.IGRID_HOME}/configs/sorcer.env</file>
+					</files>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<configuration>
+					<executable>java</executable>
+					<arguments>
+						<!-- <argument>-Xdebug</argument> <argument>-Xrunjdwp:transport=dt_socket,server=y,address=8000</argument> -->
+						<argument>-DiGrid.home=${env.IGRID_HOME}</argument>
+						<argument>-Dsorcer.env.file=${env.IGRID_HOME}/configs/sorcer.env</argument>
+						<argument>-Djava.util.logging.config.file=${env.IGRID_HOME}/configs/sorcer.logging</argument>
+						<argument>-Djava.security.policy=${env.IGRID_HOME}/policy/policy.all</argument>
+						<argument>-Dwebster=http://lynx:50001</argument>
+						<argument>-Dsorcer.webster.internal=${startWithWebster}</argument>
 						<argument>-Dsorcer.webster.debug=true</argument>
 						<argument>-Dsorcer.codebase.jars=/org/sorcersoft/sorcer/ex6-api/11.1/ex6-api-11.1.jar;/org/sorcersoft/sorcer/sorcer-api/11.1/sorcer-api-11.1.jar</argument>
-                        <argument>-classpath</argument><classpath/>
-                        <argument>sorcer.arithmetic.requestor.ArithmeticTester</argument>
-                        <argument>f1a</argument>
-                    </arguments>
-
-                    <workingDirectory>${project.root}</workingDirectory>
-                </configuration>
-            </plugin>
-
-        </plugins>
-    </build>
-
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>sorcer.arithmetic.requestor.ArithmeticTester</argument>
+						<argument>${xrt}</argument>
+					</arguments>
+					<workingDirectory>${project.root}</workingDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<profiles>
+		<profile>
+			<id>SYS</id>
+			<activation>
+				<property>
+					<name>${env.IGRID_WEBSTER_INTERFACE}</name>
+				</property>
+			</activation>
+			<properties>
+				<sorcer.webster.url>http://${env.IGRID_WEBSTER_INTERFACE}:${env.IGRID_WEBSTER_PORT}</sorcer.webster.url>
+			</properties>
+		</profile>
+		<profile>
+			<id>ENV</id>
+			<activation>
+				<property>
+					<name>${provider.webster.interface}</name>
+				</property>
+			</activation>
+			<properties>
+				<sorcer.webster.url>http://${provide.webster.interface}:${provider.webster.port}</sorcer.webster.url>
+			</properties>
+		</profile>
+	</profiles>
 </project>
