--- a/iGrid/configs/startup-boot-prv.config
+++ b/iGrid/configs/startup-boot-prv.config
@@ -8,18 +8,13 @@ import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
 com.sun.jini.start {
-  
+ 	home = "${iGrid.home}";
 	// webster root directories
-	sorcerLibPath = "${iGrid.home}${/}lib${/}sorcer${/}lib";
- 	sorcerLibDlPath = "${iGrid.home}${/}lib${/}sorcer${/}lib-dl";
-    jiniLibPath = "${iGrid.home}${/}lib${/}river${/}lib";
-    jiniLibDLPath = "${iGrid.home}${/}lib${/}river${/}lib-dl";
-    rioLibPath = "${iGrid.home}${/}lib${/}rio";
-    engLibPath = "${iGrid.home}${/}lib${/}eng";
-    engLibDlPath = "${iGrid.home}${/}lib${/}eng${/}lib-dl";
-    groovyPath = "${iGrid.home}${/}lib${/}common${/}groovy";
-    deployPath = "${iGrid.home}${/}deploy";
-    
+	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
+	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
+	deployPath 		= home + "${/}deploy";
+	repo 			= "${user.home}/.m2/repository/";
+	
 	//port = Booter.getWebsterPort(); 
 	port = 0;
 	//address = Booter.getWebsterInterface();
@@ -36,15 +31,11 @@ com.sun.jini.start {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
         SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { sorcerLibPath,
-                                         			    sorcerLibDlPath,
-                                         			    jiniLibDLPath,
-                                                        rioLibPath,
+                                         new String[] { 
+                                         		jiniLibDLPath,
                                                         jiniLibPath,
-                                                        engLibPath,
-                                                        engLibDlPath,
-                                                        groovyPath,
-                                                        deployPath }),
+                                                        deployPath,
+                                                        repo }),
     
        /* Provider descriptor */
        //String codebase, String policy, String classpath, String implClassName, String... serverConfigArgs)
