--- a/iGrid/modules/examples/pom.xml
+++ b/iGrid/modules/examples/pom.xml
@@ -17,6 +17,7 @@
 	<url>http://sorcersoft.org/</url>
 
 	<modules>
+		<module>account</module>
 		<module>ex1</module>
 		<module>ex6</module>
 	</modules>
