Example: Arithmetic - providers fixed
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@159 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/pom.xml
+++ b/iGrid/modules/examples/pom.xml
@@ -18,6 +18,7 @@
 
 	<modules>
 		<module>account</module>
+		<module>arithmetic</module>
 		<module>ex1</module>
 		<module>ex6</module>
 	</modules>
