Fixed ex2, added sorcer-security-ui
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@161 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/pom.xml
+++ b/iGrid/modules/examples/pom.xml
@@ -20,6 +20,7 @@
 		<module>account</module>
 		<module>arithmetic</module>
 		<module>ex1</module>
+		<module>ex2</module>
 		<module>ex6</module>
 	</modules>
 </project>
