Fixed ex3 - almost, sharedContext not working
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@164 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex3/configs/worker-run.properties
+++ b/iGrid/modules/examples/ex3/configs/worker-run.properties
@@ -1,8 +1,8 @@
 # Worker Requestor properties
 requestor.name=Mike
-provider.name.1=Worker1
-provider.name.2=Worker2
-provider.name.3=Worker3
+provider.name.1=Worker1-MWS
+provider.name.2=Worker2-MWS
+provider.name.3=Worker3-MWS
 
 # Accessing provider via PUSH or PULL
 #provider.access.type=PUSH
