fix versions in archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@170 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-proxy/pom.xml
@@ -14,19 +14,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
+            <version>${v.sorcer}</version>
             <artifactId>${rootArtifactId}-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
