--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-ui/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-ui/pom.xml
@@ -14,24 +14,22 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
+            <groupId>${groupId}</groupId>
             <artifactId>${rootArtifactId}-proxy</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
