--- a/iGrid/modules/tools/sorcer-provider/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/pom.xml
@@ -8,9 +8,12 @@
         <artifactId>tools</artifactId>
         <version>11.1</version>
     </parent>
+
     <name>SORCER tools :: provider-archetype</name>
     <artifactId>sorcer-provider</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
+
     <description>SORCER provider archetype</description>
     <url>http://sorcersoft.org/</url>
 
