--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>providers</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>${version}</version>
+        <version>11.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,10 +14,27 @@
     <groupId>${groupId}</groupId>
     <packaging>pom</packaging>
 
+    <properties>
+        <v.sorcer>11.1</v.sorcer>
+    </properties>
+
     <modules>
         <module>${rootArtifactId}-api</module>
         <module>${rootArtifactId}-service</module>
         <module>${rootArtifactId}-proxy</module>
         <module>${rootArtifactId}-ui</module>
     </modules>
+
+    <dependencyManagement>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer-api</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>sorcer</artifactId>
+            <version>${v.sorcer}</version>
+        </dependency>
+    </dependencyManagement>
 </project>
