fix example and archetype poms enable tests compilation and phase
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@171 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-ui/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-ui/pom.xml
@@ -3,33 +3,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>${rootArtifactId}</artifactId>
-        <groupId>${groupId}</groupId>
-        <version>${version}</version>
-    </parent>
-
     <artifactId>${rootArtifactId}-ui</artifactId>
     <name>SORCER ${rootArtifactId} :: ui</name>
 
     <dependencies>
         <dependency>
-            <groupId>${groupId}</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>${rootArtifactId}-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${groupId}</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>${rootArtifactId}-proxy</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer</artifactId>
         </dependency>
     </dependencies>
 </project>
