--- a/iGrid/modules/tools/sorcer-provider/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/pom.xml
@@ -9,10 +9,12 @@
         <version>11.1</version>
     </parent>
 
-    <name>SORCER tools :: provider-archetype</name>
+    <groupId>com.sorcersoft.sorcer</groupId>
     <artifactId>sorcer-provider</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
+
+    <name>SORCER tools :: provider-archetype</name>
 
     <description>SORCER provider archetype</description>
     <url>http://sorcersoft.org/</url>
