--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/pom.xml
@@ -2,21 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>providers</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
+        <artifactId>sorcer-root</artifactId>
         <version>11.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>${rootArtifactId}</artifactId>
-
-    <groupId>${groupId}</groupId>
-    <packaging>pom</packaging>
 
     <properties>
         <v.sorcer>11.1</v.sorcer>
     </properties>
+
+    <artifactId>${rootArtifactId}</artifactId>
+    <version>${version}</version>
+    <description>${projectDesciption}</description>
+
+    <groupId>${groupId}</groupId>
+    <packaging>pom</packaging>
 
     <modules>
         <module>${rootArtifactId}-api</module>
@@ -26,15 +28,12 @@
     </modules>
 
     <dependencyManagement>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer-api</artifactId>
-            <version>${v.sorcer}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sorcer</artifactId>
-            <version>${v.sorcer}</version>
-        </dependency>
+        <dependencies>
+            <dependency>
+                <groupId>org.sorcersoft.sorcer</groupId>
+                <artifactId>sorcer-api</artifactId>
+                <version>${v.sorcer}</version>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
