--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -1,5 +1,11 @@
 #Wed Mar 20 10:23:05 CET 2013
-package=it.pkg
-version=0.1-SNAPSHOT
-groupId=archetype.it
+package=com.example
+version=1.0.0-SNAPSHOT
+groupId=com.example.sorcer
 artifactId=basic
+providerInterface=SampleService
+providerClass=SampleServiceImpl
+projectDescription=Sample Service dascription
+serviceName=Sample Service name
+serviceDescription=Sample Service description
+serviceGroup=sorcer-group
