override ServiceStarter and change the "first" example to use it
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@172 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex2/ex2-client/pom.xml
+++ b/iGrid/modules/examples/ex2/ex2-client/pom.xml
@@ -10,7 +10,6 @@
         <version>11.1</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex2-client</artifactId>
     <name>SORCER examples :: ex2 :: client</name>
 
@@ -28,6 +27,14 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>client-common</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>gsbase</groupId>
+            <artifactId>gsbase</artifactId>
         </dependency>
     </dependencies>
 </project>
