--- a/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
@@ -35,7 +35,7 @@ com.sun.jini.start {
 		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-service","1.0-SNAPSHOT"), ps
 		  }),
 		      "sorcer.core.provider.ServiceTasker",
-		      new String[] { "src/main/resources/config/HelloWorld.config" }
+		      new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
 	      )
       };
 }
