--- a/iGrid/modules/examples/ex1/ex1-service/pom.xml
+++ b/iGrid/modules/examples/ex1/ex1-service/pom.xml
@@ -45,6 +45,13 @@
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.11</version>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
