--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -47,6 +47,18 @@
                 <artifactId>rio-platform</artifactId>
                 <version>${v.rio}</version>
             </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>gsbase</groupId>
+                <artifactId>gsbase</artifactId>
+                <version>2.0.1</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
