--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -5,7 +5,7 @@ groupId=com.example.sorcer
 artifactId=basic
 providerInterface=SampleService
 providerClass=SampleServiceImpl
-projectDescription=Sample Service dascription
+projectDescription=Sample Service description
 serviceName=Sample Service name
 serviceDescription=Sample Service description
 serviceGroup=sorcer-group
