integration test of the archetype - WIP
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@175 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
@@ -17,4 +17,22 @@
             <artifactId>sorcer-api</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+
+
+                <configuration>
+                    <target name="${rootArtifactId}">
+                        <ant antfile="${basedir}/src/main/scripts/run.xml" target="run.requestor"/>
+                    </target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
