+spacer & monitor config to the archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@176 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
@@ -18,6 +18,9 @@ sorcer.core.provider.ServiceProvider {
 	// service beans	
 	beanClasses = new Class[] { ${package}.${providerClass}.class };
 	iconName="icons/sorcer.png";
+
+	monitorEnabled = ${usesMonitor};
+    spaceEnabled = ${usesSpacer};
 }
 	
 
