--- a/iGrid/modules/tools/dependencies/pom.xml
+++ b/iGrid/modules/tools/dependencies/pom.xml
@@ -52,5 +52,10 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-ant-tasks</artifactId>
+			<version>2.1.4-20130125.234401-8</version>
+		</dependency>
 	</dependencies>
 </project>
