--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -1,5 +1,5 @@
 #Wed Mar 20 10:23:05 CET 2013
-package=com.example
+package=com.example.sorcer
 version=1.0.0-SNAPSHOT
 groupId=com.example.sorcer
 artifactId=basic
