Updated scripts in archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@179 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-client/pom.xml
@@ -28,6 +28,7 @@
 
                 <configuration>
                     <target name="${rootArtifactId}">
+			<echo message="BaseDir: ${basedir}"/>
                         <ant antfile="${basedir}/src/main/scripts/run.xml" target="run.requestor"/>
                     </target>
                 </configuration>
