--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -9,3 +9,5 @@ projectDescription=Sample Service description
 serviceName=Sample Service name
 serviceDescription=Sample Service description
 serviceGroup=sorcer-group
+usesSpacer=false
+usesMonitor=false
