archetype / fix packages, change test property values
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@180 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -1,11 +1,12 @@
 #Wed Mar 20 10:23:05 CET 2013
-package=com.example.sorcer
+#package i groupId powinny się różnić żeby przetestować poprawność zastosowanych zmiennych
+package=com.example.test
 version=1.0.0-SNAPSHOT
 groupId=com.example.sorcer
 artifactId=basic
 providerInterface=SampleService
 providerClass=SampleServiceImpl
-projectDescription=Sample Service description
+projectDescription=Sample Service project description
 serviceName=Sample Service name
 serviceDescription=Sample Service description
 serviceGroup=sorcer-group
