Modified common-run.xml - added ant contrib
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@182 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/dependencies/pom.xml
+++ b/iGrid/modules/tools/dependencies/pom.xml
@@ -57,5 +57,10 @@
 			<artifactId>maven-ant-tasks</artifactId>
 			<version>2.1.4-20130125.234401-8</version>
 		</dependency>
+		<dependency>
+			<groupId>ant-contrib</groupId>
+			<artifactId>ant-contrib</artifactId>
+			<version>1.0b3</version>
+		</dependency>
 	</dependencies>
 </project>
