Minor configuration of examples
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@187 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/first/pom.xml
+++ b/iGrid/modules/examples/first/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
 
+    <name>SORCER first</name>
     <artifactId>first</artifactId>
 
     <packaging>pom</packaging>
