change test goal to test add providerIcon as archetype required property
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@193 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { ${package}.${providerInterface}.class };
 	// service beans	
 	beanClasses = new Class[] { ${package}.${providerClass}.class };
-	iconName="icons/sorcer.png";
+	iconName="${providerIcon}";
 
 	monitorEnabled = ${usesMonitor};
     spaceEnabled = ${usesSpacer};
