--- a/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
+++ b/iGrid/modules/tools/sorcer-provider/src/main/resources/archetype-resources/__rootArtifactId__-service/src/main/resources/META-INF/sorcer/__providerInterface__.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
 	publishedInterfaces = new Class[] { ${package}.${providerInterface}.class };
 	// service beans	
 	beanClasses = new Class[] { ${package}.${providerClass}.class };
-	iconName="${providerIcon}";
+	iconName="${serviceIcon}";
 
 	monitorEnabled = ${usesMonitor};
     spaceEnabled = ${usesSpacer};
