--- a/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
+++ b/iGrid/modules/tools/sorcer-provider/src/test/resources/projects/basic/archetype.properties
@@ -12,3 +12,4 @@ serviceDescription=Sample Service description
 serviceGroup=sorcer-group
 usesSpacer=false
 usesMonitor=false
+serviceIcon=/META-INF/sorcer/sorcer.png
