Moved services.config, updated common-run.xml to allow loading classpath from pom.xml for booter, updated tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@195 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -23,16 +23,11 @@ com.sun.jini.start {
     blitz_version="2.1.7";
 
     // webster root directories
-    sorcerLibPath 	 = home + "${/}lib${/}sorcer${/}lib";
-    sorcerLibDlPath  = home + "${/}lib${/}sorcer${/}lib-dl";
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
     //rioLibPath 		 = home + "${/}lib${/}rio${/}lib";
-    blitzLib		 = home + "${/}lib${/}common${/}blitz";
-    otherLib		 = blitzLib + "${/}thirdpartylib";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
-    jfreechartLib	 = home + "${/}lib${/}common${/}jfreechart";
      
     port = Booter.getWebsterPort(); 
     //port = 0;
@@ -143,38 +138,36 @@ com.sun.jini.start {
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
              new String[] { home + "${/}bin${/}blitz${/}configs${/}lockmgr.config" }),
  */ 
-    		/* SORCER Job Service */
+    		// SORCER Job Service 
        		SorcerDescriptorUtil.getJobber(
        			policy,
-       			home + "${/}modules${/}providers${/}jobber${/}jobber-service${/}src${/}main${/}resources${/}configs${/}jobber-prv.config"),
-       			//home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
-    
-     		/* SORCER Space Service */
+       			home + "${/}modules${/}providers${/}jobber${/}jobber-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+   
+     		// SORCER Space Service
        		SorcerDescriptorUtil.getSpacer(
        			policy,
-       			home + "${/}modules${/}providers${/}spacer${/}spacer-service${/}src${/}main${/}resources${/}configs${/}spacer-prv.config"), 
-       			//home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
-    
-       		/* SORCER Catalog Service */
+       			home + "${/}modules${/}providers${/}spacer${/}spacer-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"), 
 
+    
+       		// SORCER Catalog Service
       		SorcerDescriptorUtil.getCataloger(
        			policy, 
-       			home + "${/}modules${/}providers${/}cataloger${/}cataloger-service${/}src${/}main${/}resources${/}configs${/}cataloger-prv.config"),
-       			
-       		/* SORCER Logger Service */
+       			home + "${/}modules${/}providers${/}cataloger${/}cataloger-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+     			
+       		// SORCER Logger Service
        		SorcerDescriptorUtil.getLogger(
        			policy, 
-       			home + "${/}modules${/}providers${/}logger${/}logger-service${/}src${/}main${/}resources${/}configs${/}logger-prv.config"),
-       			
-       		/* SORCER ExertMonitor Service */
+       			home + "${/}modules${/}providers${/}logger${/}logger-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+      			
+       		// SORCER ExertMonitor Service
        		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
-       			home + "${/}modules${/}providers${/}exertmonitor${/}exertmonitor-service${/}src${/}main${/}resources${/}configs${/}exertmonitor-prv.config"),
+       			home + "${/}modules${/}providers${/}exertmonitor${/}exertmonitor-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
        			
-       		/* SORCER Database Store Service */
+       		// SORCER Database Store Service
        		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}modules${/}providers${/}dbp${/}dbp-service${/}src${/}main${/}resources${/}configs${/}dbp-prv.config")
+       			home + "${/}modules${/}providers${/}dbp${/}dbp-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config")
  
     };
 }
