--- a/iGrid/modules/examples/ex6/ex6-client/pom.xml
+++ b/iGrid/modules/examples/ex6/ex6-client/pom.xml
@@ -30,7 +30,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>client-common</artifactId>
+			<artifactId>requestor-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
