--- a/iGrid/modules/providers/cataloger/cataloger-service/pom.xml
+++ b/iGrid/modules/providers/cataloger/cataloger-service/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>exertlet-ui</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>provider-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
