--- a/iGrid/modules/providers/spacer/spacer-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/providers/spacer/spacer-service/src/main/resources/META-INF/sorcer/services.config
@@ -6,16 +6,17 @@ import net.jini.jeri.tcp.*;
 import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
+import sorcer.util.Sorcer;
 
 sorcer.core.provider.ServiceProvider {
     // service provider properties
     //properties = "../configs/spacer-prv.properties";
     
-	name="Spacer";
-	publishedInterfaces = new Class[] { sorcer.service.Spacer.class };
-	description = "Spacer";
-	location = "SORCER Lab 20B - CS TTU";
-	entries = new Entry[] {
+    name=Sorcer.getSpacerName();
+    publishedInterfaces = new Class[] { sorcer.service.Spacer.class };
+    description = "Spacer";
+    location = "SORCER Lab 20B - CS TTU";
+    entries = new Entry[] {
 		new Comment("Welcome to exertion-oriented space-based programming!"), 
 		new Location("2", "218", "AFRL/RBSD-146") };
 		
