--- a/iGrid/modules/examples/ex2/ex2-client/pom.xml
+++ b/iGrid/modules/examples/ex2/ex2-client/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>client-common</artifactId>
+            <artifactId>requestor-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
