--- a/iGrid/modules/examples/first/first-service/pom.xml
+++ b/iGrid/modules/examples/first/first-service/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>sorcer-api</artifactId>
             <version>11.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>provider-common</artifactId>
+            <version>11.1</version>
+        </dependency>        
     </dependencies>
 
 </project>
