--- a/iGrid/modules/providers/dbp/dbp-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/providers/dbp/dbp-service/src/main/resources/META-INF/sorcer/services.config
@@ -12,26 +12,25 @@ import sorcer.util.*;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
-    // properties = "../configs/dbp-prv.properties";
-    properties = "${iGrid.home}${/}bin${/}sorcer${/}dbp${/}configs${/}dbp-prv.properties";
+    //properties = "${iGrid.home}${/}bin${/}sorcer${/}dbp${/}configs${/}dbp-prv.properties";
     
-	//name = "Database Storage";
-	name = Sorcer.getDatabaseStorerName();
-	
-	publishedInterfaces = new Class[] { sorcer.service.DatabaseStorer.class };
-	description = "SORCER object storage service";
-	//location="AFRL/RBSD-146";
-	entries = new Entry[] { 
-		new Comment("Welcome to SORCER storage system!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
-	
-	dbHome="${iGrid.home}${/}databases${/}dbfiles_dbp";
-	
+    //name = "Database Storage";
+    name = Sorcer.getDatabaseStorerName();
+    
+    publishedInterfaces = new Class[] { sorcer.service.DatabaseStorer.class };
+    description = "SORCER object storage service";
+    //location="AFRL/RBSD-146";
+    entries = new Entry[] { 
+	    new Comment("Welcome to SORCER storage system!"), 
+	    new Location("2", "218", "AFRL/RBSD-146") };
+    
+    dbHome="${iGrid.home}${/}databases${/}dbfiles_dbp";
+    
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
     exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
     
-   	spaceEnabled = false;
+    spaceEnabled = false;
     		
     iconName="sorcer-ico.png";
 }
