--- a/iGrid/modules/providers/dsp/dsp-service/pom.xml
+++ b/iGrid/modules/providers/dsp/dsp-service/pom.xml
@@ -21,6 +21,11 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>provider-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
