--- a/iGrid/modules/providers/exertmonitor/exertmonitor-service/pom.xml
+++ b/iGrid/modules/providers/exertmonitor/exertmonitor-service/pom.xml
@@ -26,6 +26,11 @@
 		    <artifactId>je</artifactId>
 		    <version>${v.sleepycat}</version>
 		</dependency>
+		<dependency>
+            <groupId>org.sorcersoft.sorcer</groupId>
+            <artifactId>provider-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>		
    </dependencies>
 
 </project>
