--- a/iGrid/modules/providers/jobber/jobber-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/providers/jobber/jobber-service/src/main/resources/META-INF/sorcer/services.config
@@ -6,20 +6,21 @@ import net.jini.jeri.tcp.*;
 import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
+import sorcer.util.Sorcer;
 
 sorcer.core.provider.ServiceProvider {
     // application-specific service provider properties
     //properties = "../configs/jobber-prv.properties";
     
-	name="Jobber";
-	// use this provider name suffixed with the user name
-	// overrides the sorce.env property  sorcer.provider.name.suffixed
-	// nameSuffixed = "false";
-	// nameSuffixed = "MS";
+    name="Jobber";
+    // use this provider name suffixed with the user name
+    // overrides the sorce.env property  sorcer.provider.name.suffixed
+    // nameSuffixed = "false";
+    // nameSuffixed = "MS";
 		
-	publishedInterfaces = new Class[] { sorcer.service.Jobber.class };
-	description = "SORCER Exertion Execution service with the PUSH flow control";
-	entries = new Entry[] { 
+    publishedInterfaces = new Class[] { sorcer.service.Jobber.class };
+    description = "SORCER Exertion Execution service with the PUSH flow control";
+    entries = new Entry[] { 
 		new Comment("Welcome to exertion-oriented programming!"), 
 		new Location("2", "218", "AFRL/RQSE-146") };
 	
