--- a/iGrid/modules/requestor-common/pom.xml
+++ b/iGrid/modules/requestor-common/pom.xml
@@ -5,29 +5,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>modules</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <artifactId>ex4</artifactId>
         <version>11.1</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
-    <artifactId>ex4-client</artifactId>
-    <name>SORCER examples :: ex4 :: client</name>
+    <artifactId>requestor-common</artifactId>
+    <name>SORCER requestor-common</name>
 
     <dependencies>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>ex2-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
         </dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>webster</artifactId>
+			<version>${project.version}</version>
+		</dependency>
         <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>requestor-common</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
         </dependency>
     </dependencies>
 </project>
