Fixed examples services.config
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@202 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/ex6/ex6-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/ex6/ex6-service/src/main/resources/META-INF/sorcer/services.config
@@ -34,48 +34,48 @@ com.sun.jini.start {
                                                          }),
 
   new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service","11.1"), ps
+                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}adder-prv.config" }
         ),
 
 		new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service","11.1"), ps
+                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}multiplier-prv.config" }
        ),
           	
        new SorcerServiceDescriptor(
- 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+ 			""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service","11.1"), ps
+                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}divider-prv.config" }
 	   ),
 
        new SorcerServiceDescriptor(
-            ""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1")
- 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+            ""+new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api")
+ 			+" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api"),
             policy,
             ConfigUtil.concat(new Object[] {
-                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api","11.1"), ps,
-            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service","11.1"), ps
+                repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-api"), ps,
+            	repo, new ArtifactCoordinates("org.sorcersoft.sorcer","ex6-service"), ps
             }),
 	        "sorcer.core.provider.ServiceTasker",
           	new String[] { "src${/}main${/}resources${/}META-INF${/}sorcer${/}subtractor-prv.config" }
