--- a/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
@@ -28,11 +28,12 @@ com.sun.jini.start {
 
 	      new SorcerServiceDescriptor(
 			      ""+new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT")
-			      +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+ 			     +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
 		  policy,
 		  ConfigUtil.concat(new Object[] {
 		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT"), ps,
 		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-service","1.0-SNAPSHOT"), ps
+		      //repo, 
 		  }),
 		      "sorcer.core.provider.ServiceTasker",
 		      new String[] { "classpath:/META-INF/sorcer/HelloWorld.config" }
