move SorcerConstants and ArtifactCoordinates to sorcer-api invert dependency between boot and sorcer-api
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@206 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/sorcer-api/pom.xml
+++ b/iGrid/modules/sorcer-api/pom.xml
@@ -30,11 +30,11 @@
 			<artifactId>locker</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>boot</artifactId>
 			<version>${project.version}</version>			
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>jep</groupId>
 			<artifactId>jep</artifactId>
