init sorcer-maven-plugin (WIP)
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@207 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -23,6 +23,9 @@
 		<module>shell</module>
 		<module>ssb</module>
 		<module>sorcer-provider</module>
+		<module>sorcer-maven-plugin</module>
+
+		<!-- force download implicite dependencies -->
 		<module>dependencies</module>
 	</modules>
 </project>
