Added sorcer-const module to separate the dependency between boot and sorcer-api, now both depend only on sorcer-const instead of each other
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@208 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/sorcer-api/pom.xml
+++ b/iGrid/modules/sorcer-api/pom.xml
@@ -16,11 +16,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.jini</groupId>
-            <artifactId>jsk-lib</artifactId>
-            <version>${v.jini}</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.river</groupId>
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
@@ -29,6 +24,11 @@
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>locker</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-const</artifactId>
+			<version>${project.version}</version>			
 		</dependency>
 		<!--<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
