--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -23,7 +23,7 @@
 		<module>shell</module>
 		<module>ssb</module>
 		<module>sorcer-provider</module>
-		<module>sorcer-maven-plugin</module>
+<!--		<module>sorcer-maven-plugin</module> -->
 
 		<!-- force download implicite dependencies -->
 		<module>dependencies</module>
