Added sorcer-const to pom
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@211 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/pom.xml
+++ b/iGrid/modules/pom.xml
@@ -20,6 +20,7 @@
         <module>tools</module>
         <module>examples</module>
         <module>providers</module>
+        <module>sorcer-const</module>
         <module>sorcer-api</module>
         <module>sorcer-util</module>
         <module>sorcer-security-ui</module>
