--- a/iGrid/modules/sorcer-api/pom.xml
+++ b/iGrid/modules/sorcer-api/pom.xml
@@ -20,44 +20,43 @@
             <artifactId>start</artifactId>
             <version>${v.jini}</version>
         </dependency>
-        <dependency>
-			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>locker</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>sorcer-const</artifactId>
-			<version>${project.version}</version>			
-		</dependency>
-		<!--<dependency>
-			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>boot</artifactId>
-			<version>${project.version}</version>			
-		</dependency>-->
-		<dependency>
-			<groupId>jep</groupId>
-			<artifactId>jep</artifactId>
-			<version>2.4.1a</version>
-			<scope>provided</scope>
-		</dependency>
- 		<dependency>
-			<groupId>com.sleepycat</groupId>
-			<artifactId>je</artifactId>
-			<version>${v.sleepycat}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml</groupId>
-			<artifactId>jaxrpc-api</artifactId>
-			<version>1.1</version>
-			<scope>provided</scope>
-		</dependency>
-		
+	<dependency>
+		  <groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>locker</artifactId>
+		<version>${project.version}</version>
+	</dependency>
+	<dependency>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>sorcer-const</artifactId>
+		<version>${project.version}</version>			
+	</dependency>
+	<dependency>
+		<groupId>jep</groupId>
+		<artifactId>jep</artifactId>
+		<version>2.4.1a</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>com.sleepycat</groupId>
+		<artifactId>je</artifactId>
+		<version>${v.sleepycat}</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.codehaus.groovy</groupId>
+		<artifactId>groovy-all</artifactId>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>javax.xml</groupId>
+		<artifactId>jaxrpc-api</artifactId>
+		<version>1.1</version>
+		<scope>provided</scope>
+	</dependency>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<scope>test</scope>
+	</dependency>		
     </dependencies>
 </project>
