Unit tests moved to sorcer-api, integration tests renamed to sorcer-int-tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@216 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/sorcer-tests/pom.xml
+++ b/iGrid/modules/sorcer-tests/pom.xml
@@ -9,11 +9,11 @@
 		<version>11.1</version>
 	</parent>
 	<packaging>pom</packaging>
-	<artifactId>sorcer-tests</artifactId>
-	<name>SORCER sorcer-tests</name>
+	<artifactId>sorcer-int-tests</artifactId>
+	<name>SORCER sorcer-int-tests</name>
 	<modules>
 		<module>ju-arithmetic</module>
-		<module>tests</module>
+		<module>int-tests</module>
 	</modules>
 
 
